force-app/src/objects/TR1__CandidateAvaila__mdt.object
<CustomObject>
    <fields>
        <fullName>TR1__Categories__c</fullName>
        <label>Categories</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AvailableType</fullName>
                    <default>true</default>
                    <label>AvailableType</label>
                </value>
                <value>
                    <fullName>UnavailableType</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Color_Code__c</fullName>
        <description>Capture hex value of the color to be assigned to the respective CA record with the Type value</description>
        <inlineHelpText>Hex Code for RED as #D95252</inlineHelpText>
        <label>Color Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Value__c</fullName>
        <label>Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>CandidateAvailabilityTypes</label>
    <pluralLabel>CandidateAvailabilityTypes</pluralLabel>
</CustomObject>